# JobSearchAI

./: .env  .gitignore  README.md  command.txt  dashboard.html  main.py  pyproject.toml  run_scrape.py  server.py  templateCV.tex  templateCoverLetter.tex
config/: pipeline_config.yaml
data/: resume.yaml
jobs/error_jd/: jd_failed.txt
jobs/input/: jd_sample.txt
prompts/: ats_prompt.txt  cover_letter.txt  resume_tailor.txt
resume_tailor/: __init__.py  cleanup.py  cli.py  config.py  excel.py  files.py  latex.py  llm.py  pdf.py  pipeline.py  resume_data.py  schemas.py  scrape_jobs.py
sample_docs/risebird_data_scientist/: AI_Analysis.txt  John_Doe_CV.tex  John_Doe_CoverLetter.tex  developercv.cls
tests/: test_rendering_and_excel.py  test_validation.py
tracking/: jobs.xlsx
