[project]
name = "resume-tailor"
version = "0.1.0"
authors = [
    { name = "Shridhar Mashalkar" }
]
requires-python = ">=3.11"
dependencies = [
    "apify-client>=3.0.2",
    "langchain>=1.2.16",
    "langchain-openai>=1.2.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pydantic>=2.13.3",
    "python-dotenv>=1.2.2",
    "python-jobspy>=1.1.82",
    "pyyaml>=6.0.3",
    "tavily-python>=0.7.26",
]

[project.scripts]
resume-tailor = "resume_tailor.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["."]
include = ["resume_tailor*"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
